@@ -1,0 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Admin's dashboard</title>
+    </head>
+    <body>
+        <a href="/add-dish">Add new dish</a><br>
+        <a href="/view-orders">View orders</a><br>
+    </body>
+</html>
